[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/box.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/background.png" type="Texture" id=2]
[ext_resource path="res://assets/music/background.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/ui_scoring.png" type="Texture" id=4]
[ext_resource path="res://scripts/main.gd" type="Script" id=5]
[ext_resource path="res://scenes/start.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/tryagain.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/GOODDP__.TTF" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="CircleShape2D" id=2]
radius = 132.229

[sub_resource type="CircleShape2D" id=3]
radius = 132.443

[sub_resource type="DynamicFont" id=4]
size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 1176.37, 625.234, 1795.02, 705.054, 1849.95, 734.458, 1842.4, 991.247, 1407.58, 848.553, 1314.3, 793.545, 1730.45, 563.946, 1795.02, 630.913, 1156.45, 532.855, 1147.56, 472.635, 1653.92, 236.29, 1696.97, 221.94, 1673.05, 437.189, 1634.78, 298.473, 1586.95, 336.739, 1591.73, 456.322, 263.673, 1011.39, 300.238, 905.953, 1299.95, 908.345, 1474.84, 69.8302, 1472.32, 213.329, 1441.06, 207.59, 1402.79, 166.932, 1318.75, 59.7601, 1350.18, 147.798, 1237.77, 140.623, 1297.56, 202.806, 1225.81, 217.156, 397.335, 52.2075, 525.729, 47.1724, 515.659, 200.742, 369.597, 128.665, 355.247, 164.54, 508.313, 262.598, 712.027, 168.014, 714.544, 52.2075, 870.631, 57.2426, 890.978, 157.365, 1083.22, 693.396, 1252.12, 862.903, 967.342, 425.292, 991.427, 164.54, 1008.17, 95.1818, 1063.18, 95.1818, 1075.14, 253.031, 1035.5, 432.108, 104.123, 910.737, 85.1614, 930.826, 52.4335, 928.308, 52.4335, 530.538, 166.306, 795.937, 706.992, 283.82, 709.509, 223.4, 887.82, 445.74, 1754.37, 499.372, 1541.51, 456.322, 1376.48, 898.778, 209.356, 193.24, 130.477, 115.146, 148.1, 54.725, 296.634, 57.2426, 321.763, 150.19, 228.489, 791.154, 87.3811, 485.022, 1419.53, 241.073, 1534.33, 324.781, 523.212, 308.996, 80.2061, 398.922, 183.047, 339.131, 611.154, 324.781, 674.264, 319.066, 815.245, 500.328, 812.053, 556.771, 1180.37, 257.814, 1347.78, 245.856, 1092.31, 454.829, 946.894, 709.301, 824.202, 654.771 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ), PoolIntArray( 6, 7, 1, 0, 8, 9 ), PoolIntArray( 10, 11, 12, 13 ), PoolIntArray( 14, 13, 12, 15 ), PoolIntArray( 3, 16, 17, 18 ), PoolIntArray( 19, 20, 21, 22, 23 ), PoolIntArray( 23, 22, 24 ), PoolIntArray( 25, 23, 24, 26, 27 ), PoolIntArray( 28, 29, 30, 31 ), PoolIntArray( 32, 31, 30, 33 ), PoolIntArray( 34, 35, 36, 37 ), PoolIntArray( 38, 0, 5, 39 ), PoolIntArray( 40, 41, 42, 43, 44, 45 ), PoolIntArray( 46, 47, 48, 49, 50 ), PoolIntArray( 51, 52, 34, 37, 41, 40, 53 ), PoolIntArray( 15, 54, 6, 9, 55 ), PoolIntArray( 56, 4, 3 ), PoolIntArray( 57, 58, 59, 60, 61 ), PoolIntArray( 62, 50, 49, 63 ), PoolIntArray( 64, 21, 20, 65, 55 ), PoolIntArray( 66, 62, 63, 67, 68, 33 ), PoolIntArray( 68, 57, 61, 32, 33 ), PoolIntArray( 62, 66, 69, 17 ), PoolIntArray( 17, 69, 70, 71, 72 ), PoolIntArray( 73, 27, 26, 74, 55, 9, 75 ), PoolIntArray( 76, 38, 39, 17 ), PoolIntArray( 74, 64, 55 ), PoolIntArray( 15, 12, 54 ), PoolIntArray( 44, 73, 75, 45 ), PoolIntArray( 51, 53, 71, 70 ), PoolIntArray( 17, 72, 77 ), PoolIntArray( 17, 77, 76 ), PoolIntArray( 17, 39, 18 ), PoolIntArray( 3, 18, 56 ) ]
outlines = [ PoolVector2Array( 130.477, 115.146, 209.356, 193.24, 183.047, 339.131, 80.2061, 398.922, 87.3811, 485.022, 52.4335, 530.538, 52.4335, 928.308, 85.1614, 930.826, 104.123, 910.737, 166.306, 795.937, 228.489, 791.154, 300.238, 905.953, 263.673, 1011.39, 1842.4, 991.247, 1849.95, 734.458, 1795.02, 705.054, 1795.02, 630.913, 1730.45, 563.946, 1754.37, 499.372, 1673.05, 437.189, 1696.97, 221.94, 1653.92, 236.29, 1634.78, 298.473, 1586.95, 336.739, 1591.73, 456.322, 1541.51, 456.322, 1534.33, 324.781, 1472.32, 213.329, 1474.84, 69.8302, 1318.75, 59.7601, 1237.77, 140.623, 1225.81, 217.156, 1180.37, 257.814, 1075.14, 253.031, 1063.18, 95.1818, 1008.17, 95.1818, 991.427, 164.54, 890.978, 157.365, 870.631, 57.2426, 714.544, 52.2075, 712.027, 168.014, 709.509, 223.4, 706.992, 283.82, 674.264, 319.066, 611.154, 324.781, 523.212, 308.996, 508.313, 262.598, 515.659, 200.742, 525.729, 47.1724, 397.335, 52.2075, 369.597, 128.665, 355.247, 164.54, 321.763, 150.19, 296.634, 57.2426, 148.1, 54.725 ), PoolVector2Array( 1314.3, 793.545, 1252.12, 862.903, 1299.95, 908.345, 1376.48, 898.778, 1407.58, 848.553 ), PoolVector2Array( 1350.18, 147.798, 1297.56, 202.806, 1347.78, 245.856, 1419.53, 241.073, 1441.06, 207.59, 1402.79, 166.932 ), PoolVector2Array( 887.82, 445.74, 815.245, 500.328, 812.053, 556.771, 824.202, 654.771, 946.894, 709.301, 1083.22, 693.396, 1176.37, 625.234, 1156.45, 532.855, 1147.56, 472.635, 1092.31, 454.829, 1035.5, 432.108, 967.342, 425.292 ) ]

[node name="main" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 560.478 ],
"_edit_vertical_guides_": [ 994.114 ]
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 960.29, 540.529 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 1625.24
margin_top = 1010.06
margin_right = 1872.24
margin_bottom = 1040.06
custom_fonts/font = SubResource( 1 )
text = "Created by Bogdan Bashev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" parent="." instance=ExtResource( 1 )]
position = Vector2( 989.95, 565.005 )
z_index = 0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 131.798, 58.3175 )

[node name="bridge_left" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 574.552, 343.407 )
shape = SubResource( 2 )

[node name="bridge_right" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1112.4, 337.546 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="start" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_left = 801.014
margin_top = 753.198
margin_right = 4562.13
margin_bottom = 3318.28

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 1789.9, 73.0564 )
scale = Vector2( 0.260679, 0.258681 )
texture = ExtResource( 4 )

[node name="left" type="Label" parent="CanvasLayer"]
margin_left = 1704.83
margin_top = 31.9736
margin_right = 1855.83
margin_bottom = 70.9736
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
text = "Cats left: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gone" type="Label" parent="CanvasLayer"]
margin_left = 1707.26
margin_top = 102.938
margin_right = 1858.26
margin_bottom = 141.938
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.984314, 0.984314, 1 )
text = "Cats gone :10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tryagain" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 697.0
margin_top = -29.0
margin_right = 1272.0
margin_bottom = 338.0
expand = true

[node name="Navigation2D" type="Navigation2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.315
autoplay = true
[connection signal="landed" from="box" to="." method="_on_box_landed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="start" from="CanvasLayer/start" to="." method="_on_start_start"]
[connection signal="try_again" from="CanvasLayer/tryagain" to="." method="_on_tryagain_try_again"]
